src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(info) {
        return extractList(info);
      },
      peg$c1 = /^[1-9]/,
      peg$c2 = peg$classExpectation([["1", "9"]], false, false),
      peg$c3 = peg$anyExpectation(),
      peg$c4 = "\r\n",
      peg$c5 = peg$literalExpectation("\r\n", false),
      peg$c6 = "\r",
      peg$c7 = peg$literalExpectation("\r", false),
      peg$c8 = "\n",
      peg$c9 = peg$literalExpectation("\n", false),
      peg$c10 = " ",
      peg$c11 = peg$literalExpectation(" ", false),
      peg$c12 = "\t",
      peg$c13 = peg$literalExpectation("\t", false),
      peg$c14 = /^[ -']/,
      peg$c15 = peg$classExpectation([[" ", "'"]], false, false),
      peg$c16 = /^[+-@]/,
      peg$c17 = peg$classExpectation([["+", "@"]], false, false),
      peg$c18 = /^[A-Z]/,
      peg$c19 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c20 = /^[a-z]/,
      peg$c21 = peg$classExpectation([["a", "z"]], false, false),
      peg$c22 = /^[`-z]/,
      peg$c23 = peg$classExpectation([["`", "z"]], false, false),
      peg$c24 = /^[ -*]/,
      peg$c25 = peg$classExpectation([[" ", "*"]], false, false),
      peg$c26 = /^[A-[]/,
      peg$c27 = peg$classExpectation([["A", "["]], false, false),
      peg$c28 = /^[A-_]/,
      peg$c29 = peg$classExpectation([["A", "_"]], false, false),
      peg$c30 = /^[a-~]/,
      peg$c31 = peg$classExpectation([["a", "~"]], false, false),
      peg$c32 = /^[ -@]/,
      peg$c33 = peg$classExpectation([[" ", "@"]], false, false),
      peg$c34 = /^[A-`]/,
      peg$c35 = peg$classExpectation([["A", "`"]], false, false),
      peg$c36 = /^[a-\xFFFF]/,
      peg$c37 = peg$classExpectation([["a", "\xFF"], "F", "F"], false, false),
      peg$c38 = /^[\-]/,
      peg$c39 = peg$classExpectation(["-"], false, false),
      peg$c40 = function(text) {
          return {
           others: text.join("")
          }
      },
      peg$c41 = "#",
      peg$c42 = peg$literalExpectation("#", false),
      peg$c43 = function(text) {
          return {
           heading: text.join("")
          }
      },
      peg$c44 = function(text) {
          return {
           section: text.join("")
          }
      },
      peg$c45 = /^[*]/,
      peg$c46 = peg$classExpectation(["*"], false, false),
      peg$c47 = function(text) {
          return {
           italic: text.join("")
          }
      },
      peg$c48 = /^[_]/,
      peg$c49 = peg$classExpectation(["_"], false, false),
      peg$c50 = function(text) {
          return {
           bold: text.join("")
          }
        },
      peg$c51 = /^[~]/,
      peg$c52 = peg$classExpectation(["~"], false, false),
      peg$c53 = function(text) {
          return {
           strikethrough : text.join("")
          }
        },
      peg$c54 = "* ",
      peg$c55 = peg$literalExpectation("* ", false),
      peg$c56 = "- ",
      peg$c57 = peg$literalExpectation("- ", false),
      peg$c58 = function(text) {return text.join("").trim()},
      peg$c59 = "- [x] ",
      peg$c60 = peg$literalExpectation("- [x] ", false),
      peg$c61 = "- [ ] ",
      peg$c62 = peg$literalExpectation("- [ ] ", false),
      peg$c63 = function() {return text.join("").trim()},
      peg$c64 = "  ",
      peg$c65 = peg$literalExpectation("  ", false),
      peg$c66 = ". ",
      peg$c67 = peg$literalExpectation(". ", false),
      peg$c68 = function(lists) {
         return {
          lists: lists
         }
      },
      peg$c69 = function(tasks) {
         return {
          tasks: tasks
         }
      },
      peg$c70 = function(lists) {
         return {
          listsOrdered: lists
         }
      },
      peg$c71 = "bash",
      peg$c72 = peg$literalExpectation("bash", false),
      peg$c73 = "c",
      peg$c74 = peg$literalExpectation("c", false),
      peg$c75 = "cpp",
      peg$c76 = peg$literalExpectation("cpp", false),
      peg$c77 = "html",
      peg$c78 = peg$literalExpectation("html", false),
      peg$c79 = "javascript",
      peg$c80 = peg$literalExpectation("javascript", false),
      peg$c81 = "js",
      peg$c82 = peg$literalExpectation("js", false),
      peg$c83 = "json",
      peg$c84 = peg$literalExpectation("json", false),
      peg$c85 = "java",
      peg$c86 = peg$literalExpectation("java", false),
      peg$c87 = "ruby",
      peg$c88 = peg$literalExpectation("ruby", false),
      peg$c89 = /^[`]/,
      peg$c90 = peg$classExpectation(["`"], false, false),
      peg$c91 = function(text) {return text.join("")},
      peg$c92 = "`",
      peg$c93 = peg$literalExpectation("`", false),
      peg$c94 = function(type, code) {
        return {
          code: code,
          type: type
        }
      },
      peg$c95 = /^[[]/,
      peg$c96 = peg$classExpectation(["["], false, false),
      peg$c97 = /^[\]]/,
      peg$c98 = peg$classExpectation(["]"], false, false),
      peg$c99 = function() {return ""},
      peg$c100 = /^[(]/,
      peg$c101 = peg$classExpectation(["("], false, false),
      peg$c102 = /^[)]/,
      peg$c103 = peg$classExpectation([")"], false, false),
      peg$c104 = "",
      peg$c105 = function(title, href) {
           return {
            references: {
              title: title,
              href: href,
              image: isImage(href)
            }
           }
          },
      peg$c106 = /^[0-9a-f]/i,
      peg$c107 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),
      peg$c108 = /^[\x80-\uFFFF]/,
      peg$c109 = peg$classExpectation([["\x80", "\uFFFF"]], false, false),
      peg$c110 = "\\",
      peg$c111 = peg$literalExpectation("\\", false),
      peg$c112 = /^[ \t\r\n\f]/,
      peg$c113 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false),
      peg$c114 = function(digits) {
            return String.fromCharCode(parseInt(digits, 16));
          },
      peg$c115 = /^[^\r\n\f0-9a-f]/i,
      peg$c116 = peg$classExpectation(["\r", "\n", "\f", ["0", "9"], ["a", "f"]], true, true),
      peg$c117 = function(ch) { return ch; },
      peg$c118 = /^[_a-z]/i,
      peg$c119 = peg$classExpectation(["_", ["a", "z"]], false, true),
      peg$c120 = /^[_a-z0-9\-]/i,
      peg$c121 = peg$classExpectation(["_", ["a", "z"], ["0", "9"], "-"], false, true),
      peg$c122 = "\"",
      peg$c123 = peg$literalExpectation("\"", false),
      peg$c124 = /^[^\n\r\f\\"]/,
      peg$c125 = peg$classExpectation(["\n", "\r", "\f", "\\", "\""], true, false),
      peg$c126 = function(nl) { return ""; },
      peg$c127 = function(chars) {
            return chars.join("");
          },
      peg$c128 = "'",
      peg$c129 = peg$literalExpectation("'", false),
      peg$c130 = /^[^\n\r\f\\']/,
      peg$c131 = peg$classExpectation(["\n", "\r", "\f", "\\", "'"], true, false),
      peg$c132 = /^[_a-zA-Z0-9\-\n]/,
      peg$c133 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"], "-", "\n"], false, false),
      peg$c134 = function(chars) { return chars.join("")},
      peg$c135 = "/*",
      peg$c136 = peg$literalExpectation("/*", false),
      peg$c137 = /^[^*]/,
      peg$c138 = peg$classExpectation(["*"], true, false),
      peg$c139 = "*",
      peg$c140 = peg$literalExpectation("*", false),
      peg$c141 = /^[^\/*]/,
      peg$c142 = peg$classExpectation(["/", "*"], true, false),
      peg$c143 = "/",
      peg$c144 = peg$literalExpectation("/", false),
      peg$c145 = "-",
      peg$c146 = peg$literalExpectation("-", false),
      peg$c147 = function(prefix, start, chars) {
            return prefix + start + chars.join("");
          },
      peg$c148 = function(chars) { return chars.join(""); },
      peg$c149 = /^[+\-]/,
      peg$c150 = peg$classExpectation(["+", "-"], false, false),
      peg$c151 = /^[0-9]/,
      peg$c152 = peg$classExpectation([["0", "9"]], false, false),
      peg$c153 = ".",
      peg$c154 = peg$literalExpectation(".", false),
      peg$c155 = "e",
      peg$c156 = peg$literalExpectation("e", false),
      peg$c157 = function() {
            return parseFloat(text());
          },
      peg$c158 = /^[!#$%&*-[\]-~]/,
      peg$c159 = peg$classExpectation(["!", "#", "$", "%", "&", ["*", "["], ["]", "~"]], false, false),
      peg$c160 = "\f",
      peg$c161 = peg$literalExpectation("\f", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseMarkdown();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseMarkdown();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseMarkdown() {
    var s0;

    s0 = peg$parseEndOfLine();
    if (s0 === peg$FAILED) {
      s0 = peg$parseHeading();
      if (s0 === peg$FAILED) {
        s0 = peg$parseBold();
        if (s0 === peg$FAILED) {
          s0 = peg$parseItalic();
          if (s0 === peg$FAILED) {
            s0 = peg$parseStrikethrough();
            if (s0 === peg$FAILED) {
              s0 = peg$parseTasks();
              if (s0 === peg$FAILED) {
                s0 = peg$parseLists();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseOrderedLists();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseInlineCode();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseMultiplelLineCode();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseReferences();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseReferencesEmpty();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseSection();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseOthers();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parseSpace();
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseDigit1_9() {
    var s0;

    if (peg$c1.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseEOF() {
    var s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = void 0;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecrlf() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 13) {
        s0 = peg$c6;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s0 = peg$c8;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
    }

    return s0;
  }

  function peg$parseEatLine() {
    var s0, s1, s2, s3, s4;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$currPos;
    peg$silentFails++;
    s3 = peg$parsecrlf();
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = void 0;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseEOF();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parsecrlf();
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = void 0;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseEOF();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = void 0;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseEndOfLine() {
    var s0, s1;

    s0 = [];
    if (input.substr(peg$currPos, 2) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 10) {
        s1 = peg$c8;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s1 = peg$c6;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (input.substr(peg$currPos, 2) === peg$c4) {
          s1 = peg$c4;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s1 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s1 = peg$c8;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s1 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 13) {
              s1 = peg$c6;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
          }
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSpace() {
    var s0, s1;

    s0 = [];
    if (input.charCodeAt(peg$currPos) === 32) {
      s1 = peg$c10;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (input.charCodeAt(peg$currPos) === 32) {
          s1 = peg$c10;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c12;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseEndOfLine();
      }
    }

    return s0;
  }

  function peg$parseAnyText() {
    var s0;

    if (peg$c14.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    if (s0 === peg$FAILED) {
      if (peg$c16.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c18.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c20.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c21); }
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parsenonascii();
            if (s0 === peg$FAILED) {
              s0 = peg$parseescape();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseListText() {
    var s0;
